--- a/app/pages/welcome/welcome.html
+++ b/app/pages/welcome/welcome.html
@@ -2,8 +2,8 @@
     <button menuToggle>
         <ion-icon name="menu"></ion-icon>
     </button>
-
-</ion-navbar>
+<ion-title>Welcome to DreamHouse Realty</ion-title>
+</ion-navbar>   
 
 <ion-content class="welcome">
 
